# Gasyori100knock_c

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  build_answers.sh  run_all_answers.sh  run_answers.sh  run_docker.sh  setup.sh
answers/: 001_rgb_to_bgr.c  002_grayscale.c  003_binarization.c  004_otsu_binarization.c  005_hsv.c  006_color_sub.c  007_average_pooling.c  008_max_pooling.c  009_gaussian_filter.c  010_median_filter.c  011_smoothing_filter.c  012_motion_filter.c  013_max_min_filter.c  014_differential_filter.c  015_prewitt_filter.c  016_sobel_filter.c  017_laplacian_filter.c  018_emboss_filter.c  019_log_filter.c  020_histogram.c  021_norm_hist.c  022_trans_hist.c  023_equal_hist.c  024_gamma_correction.c  025_nearest_neighbor.c  026_bilinear.c  027_bicubic.c  028_affine_trans.c  029_affine_scale.c  030_affine_rot.c  031_affine_skew.c  032_dft.c  CMakeLists.txt
example/: CMakeLists.txt  example.c
imgdata/: CMakeLists.txt  README.md
imgdata/include/: imgdata.h
imgdata/src/: CMakeLists.txt  imgdata.c
include/: imgdata.h
questions/: 001_rgb_to_bgr.c  002_grayscale.c  003_binarization.c  004_otsu_binarization.c  CMakeLists.txt
utils/: CMakeLists.txt  imgdata.c  imgdata.h
